# DecomposeRL

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
scripts/: merge_and_push.py  push_merged.py  serve_judge.sh  train_grpo.sh  train_tiny_judge.sh
src/baselines/: ADAPTATIONS.md  api.py  audit.sh  baseline.sh  claimdecomp.py  diagnose_unparsed.py  direct.py  nli.py  prompts.py  qacheck.py  reaggregate_in_place.py  retry_api_errors.py  run.py  utils.py
src/data_process/: augment_long_evidence.py  compare_diversity.py  decompose_augmented.py  decompose_claims.py  diversify_farthest.py  diversify_kmeans.py  diversify_kmeans_dpp.py  diversify_random.py  diversify_submod.py  embed_claims.py  filter_confidence_complexity.py  filter_num_decomps.py  filter_num_of_ner.py  filter_rule_based.py  filter_semantic.py  get_all.py  get_raw.py  ner_claims.py  plot_selector_comparison.py  process.sh
src/eval/: baseline.py  baseline_minicheck.py  eval_best_checkpoint.py  inference.py  test.py  test.sh  utils.py
src/grpo/: format_reward.py  grpo_lora.py  llm_cache.py  reward_funcs.py  rewards.py  rewards_tiny_judge.py
src/test/: eval.sh  test.py
src/tiny_judge/: _common.py  _encoder_common.py  build_dataset.py  train_encoder_balanced.py
src/train/decomposerl/: format_reward.py  llm_cache.py  prompts.py  rewards.py  rewards_llm.py  rewards_tiny.py  train.py
src/train/tiny_judge/: _common.py  _encoder_common.py  build_dataset.py  train_encoder_balanced.py
